# zathura-language-server

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  addon-info.json  flake.nix  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml  python-test.yml  vim.yml
assets/json/: scope.json  sublime-syntax.json  syntax.json
autoload/: sublime_syntax.vim  syntax_test.vim
autoload/coc/source/: sublime_syntax.vim  syntax_test.vim
autoload/syntax_test/: completion.vim  main.vim
compiler/: bat.vim
doc/: sublime-syntax.txt
docs/: conf.py
docs/api/: zathura-language-server.md
docs/resources/: configure.md  install.md
examples/: Requirementstxt.json  Requirementstxt.sublime-syntax
ftdetect/: sublime_syntax.vim  syntax_test.vim  zathurarc.vim
ftplugin/: sublime_syntax.vim  syntax_test.vim  zathurarc.vim
requirements/: test.txt
rplugin/python3/sublime_syntax/: __init__.py  __main__.py  scope.py  syntax.py
rplugin/python3/syntax-test/: yaml2json.py
scripts/: generate-zathurarc.json.py  git-commit.sh  update-vim-plugin.vim
src/zathura_language_server/: __init__.py  __main__.py  api.py  finders.py  schema.py  server.py  utils.py
src/zathura_language_server/assets/jq/: main.jq  value.jq
src/zathura_language_server/misc/: __init__.py  zathurarc.py
syntax/: sublime_syntax.vim  syntax_test.vim  zathurarc.vim
test/: syntax_test.vimspec
tests/: __init__.py  generate_syntax_test.py  server_test.py  sublime_syntax_test.py  test_server.py  test_utils.py  yaml2json_test.py  zathurarc
(+1 files in other folders)
